Fix word wrapping issues CKEditor :bug:

--- a/_editor/components/canvas/dali_box/_daliBox.scss
+++ b/_editor/components/canvas/dali_box/_daliBox.scss
@@ -14,20 +14,44 @@
     height: 100%;
     line-height: normal;
 
+
 }
 
 .boxStyle {
     position: relative;
     word-wrap: break-word;
     overflow: visible;
+  pre, pre * {
+    word-break: break-all !important;
+
+    white-space: pre-wrap;
+  }
 }
 
-.textareaStyle {
-    position: absolute !important;
-    top: 0;
+.textAreaStyle {
+    z-index: 99999;
+    //position: absolute !important;
+    position: relative;
+    float: left;
+    resize: none;
+    top: 0%;
+    color: black;
     background-color: transparent;
-}
+    padding: 10px;
+    width: 100%;
+    background-color: transparent;
+    word-wrap: break-word !important;
+    pre {
+      word-break: break-all !important;
+    }
+    //word-break: normal;
 
+}
+@supports (-ms-ime-align:auto) {
+  .textAreaStyle, .boxStyle {
+    word-break: break-all;
+  }
+}
 /*Box overlay*/
 .boxOverlay {
     width: 100%;
@@ -91,6 +115,7 @@
 
 .wholebox, .wholeboxvisor{
     display: inline-block;
+    word-break: break-word;
 }
 
 .canvaseditor {
